# SLAEMethods

SLE/: CMakeLists.txt
SLE/src/: CMakeLists.txt
SLE/src/CSR/: MatrixOnCSR.hpp
SLE/src/SolverTridiag/: Solver.hpp
SLE/src/Tridiag/: Tridiag.hpp
SLE/src/Work/: Methods.hpp
SLE/tests/: CMakeLists.txt  file1.txt  file2.txt  file3.txt  tests.cpp  tests_CSR.cpp
